# Mapper

./: README.md  chemical.py  demo.py  pyproject.toml  reaction.py  rxns.smi  setup.cfg  test_chemical.py  test_reaction.py
docs/: conf.py  index.rst
mapper/: __init__.py  chemical.py  core.py  pattern.py  reaction.py
mapper/test/: test_chemical.py  test_core.py  test_pattern.py  test_reaction.py
tests/: test_chemical.py  test_pattern.py
