[metadata]
name = mapper
version = 0.1
author = Mikolaj Kowalik
author_email = mxk@illinois.edu
maintainer = Mikolaj Kowalik
maintainer_email = mxk@illinois.edu
description = Approximate structure-matching algorithm by Lynch and Willett
long_description = file: README.md, LICENSE
keywords = chemoinformatics, structure matching, Lynch-Wilett
license = GPL-3.0
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = True
packages = find:
python_requires = >=3.11
install_requires =
    numpy
    rdkit

[options.extras_require]
test =
    coverage
    pytest

[options.packages.find]
exclude =
    example*
    docs*
